--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "jose": "^6.1.3",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
